--- a/HummPizzaiolo/nbproject/project.properties
+++ b/HummPizzaiolo/nbproject/project.properties
@@ -29,9 +29,17 @@ dist.jar=${dist.dir}/HummPizzaiolo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.kxml2-2.3.0.jar=lib/xstream/kxml2-2.3.0.jar
+file.reference.kxml2-min-2.3.0.jar=lib/xstream/kxml2-min-2.3.0.jar
+file.reference.xmlpull-1.1.3.1.jar=lib/xstream/xmlpull-1.1.3.1.jar
+file.reference.xstream-1.4.4.jar=lib/xstream/xstream-1.4.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.kxml2-2.3.0.jar}:\
+    ${file.reference.kxml2-min-2.3.0.jar}:\
+    ${file.reference.xmlpull-1.1.3.1.jar}:\
+    ${file.reference.xstream-1.4.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
